--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 title: Welcome to the L-lychnis's homepage!
 description: This is a hello world page
